# tinyRPC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-cn.md  README.md  core.tar  setup.sh  tiny.cc  tiny.hpp  tinyRPC.cc
async/: CMakeLists.txt  async.cc  async.cpp  async_test.cc  awaitable.hpp  event.cc  event.hpp  example.cc  executor.hpp  generator.hpp  io_context.hpp  promise.hpp  stop_signal.hpp  sync_wait.hpp  task.hpp  task_container.hpp  thread_pool.cc  thread_pool.hpp  when_all.hpp
codec/: CMakeLists.txt  codec-archive.hpp  codec-pb.hpp  codec.hpp  serialization.cc
common/: CMakeLists.txt  align.hpp  cacheline-padding.hpp  clock.hpp  common-bench.cc  common-test.cc  common.cc  common_test.cc  context.hpp  defer.hpp  dtoa-grisu2.hpp  error.hpp  fast-clock.hpp  fastclock.hpp  fastmemcpy.hpp  fsm.hpp  log.hpp  magic_get.hpp  non-copyable.h  non-copyable.hpp  noncopyable.hpp  schema.hpp  singleton.hpp  slice.hpp  string.hpp  thread.hpp  timestamp.hpp  trait.hpp  tuple_util.hpp
common/coroutine/: CMakeLists.txt  coroutine.cc  coroutine_pool.cc
core/: CMakeLists.txt  addr.cc  addr.h  buffer-pool.cc  buffer-pool.hpp  core.cc  coroutine_pool.hpp  link-buffer.hpp  netaddr.cc  proactor.cc  proactor.hpp  queue.hpp  reactor.hpp  tcp-stream-buffer.hpp  timer.hpp
coroutine/: CMakeLists.txt  coctx.h  coroutine.cc  coroutine.h  coroutine_hook.cc  coroutine_hook.h  coroutine_pool.cc  coroutine_pool.h
lab0/: CMakeLists.txt  echo-server.cc  echo-server.hpp  lab0-cn.md  lab0.md  lab0_cn.md
lab1/: CMakeLists.txt  echo-client.cc  echo-client.hpp  echo-client.py  echo-server.cc  echo-server.hpp  echo-test.cc  echo_server.cc  echo_server.hpp  lab1-cn.md  lab1.md  main.cc  tcp-client.hpp  tcp_client.hpp  test.data
misc/: non-copyable.h
net/: CMakeLists.txt  abstract_codec.h  abstract_data.h  abstract_dispatcher.h  abstract_slot.h  byte.h  coroutine_hook.cc  fd_event.cc  fd_event.h  io_thread.cc  io_thread.h  mutex.h  net_address.cc  net_address.h  net_test.cc  reactor.cc  reactor.h  tcp_buffer.cc  tcp_buffer.h  tcp_client.cc  tcp_client.h  tcp_conn_timer.cc  tcp_conn_timer.h  tcp_connection.cc  tcp_connection.h  tcp_connection_time_wheel.cc  tcp_connection_time_wheel.h  tcp_server.cc  tcp_server.h  timer.cc  timer.h
net2/: CMakeLists.txt  address.cc  address.hpp  alloc.cc  alloc.hpp  async_sqe.hpp  io.cc  io.hpp  listener.cc  listener.hpp  net2_test.cc  server.cc  server.hpp  tcp_stream.cc  tcp_stream.hpp
protocol/: CMakeLists.txt  archive.hpp  codec-archive.hpp  codec-cn.md  codec-pb.hpp  codec.hpp  codec.md  factory.hpp  pb.hpp  protoc.cc  protocol.cc  protocol.hpp  rpc.hpp  schema.hpp
test/: CMakeLists.txt  protocol_test.cc
